2008-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-follow-link): Complete last change.

2008-11-23  Juanma Barranquero  <lekktu@gmail.com>

	* textmodes/remember.el (remember-region): Doc fix.
	(remember-filter-functions, remember-handler-functions)
	(remember-save-after-remembering, remember-mailbox)
	(remember-default-priority, remember-data-file, remember-leader-text)
	(remember-diary-file): Remove * from defcustom docstrings.
	(remember-run-all-annotation-functions-flag)
	(remember-all-handler-functions): Reflow docstrings.
	(remember-store-in-mailbox): Fix typo in docstring.
	(remember-mode): Define with `define-derived-mode'.  Doc fix.

2008-11-23  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-cmd.el (eshell-in-pipeline-p): Add doc-string.
	(eshell-do-pipelines): Add optional argument to distinguish recursive
	calls.  Use to set eshell-in-pipeline-p to 'first for the first command
	in a pipeline.

	* eshell/esh-proc.el (eshell-gather-process-output):
	Set process-connection-type nil for all but the first element of a
	pipeline.  (Bug#1388)

2008-11-22  Michael Kifer  <kifer@cs.stonybrook.edu>

	* ediff-hook.el: Add tooltips to Emacs menus.

	* ediff.el: Change date of last update.

2008-11-22  Juri Linkov  <juri@jurta.org>

	* dired-aux.el (dired-isearch-filenames): Add new context-dependent
	option `dwim'.  Change non-dwim option from `dired-filename' to `t'.
	Doc fix.
	(dired-isearch-filenames-setup): Run filename Isearch only when
	dired-isearch-filenames is t or dired-isearch-filenames is `dwim'
	and the text property `dired-filename' at point is non-nil.
	In this case also set isearch-message-prefix-add to "filename ".
	(dired-isearch-filenames-end): Set isearch-message-prefix-add to nil.
	(dired-isearch-filenames, dired-isearch-filenames-regexp):
	Don't let-bind isearch-message-prefix-add since this is done now
	in dired-isearch-filenames-setup.

	* isearch.el (isearch-mode): Change the order of calling